--- a/src/app-elle-site/styles/additional/components/social/_title.scss
+++ b/src/app-elle-site/styles/additional/components/social/_title.scss
@@ -1,20 +1,17 @@
 .page__top-container {
     .get-social {
+        margin-left: -10px;
+
+        @media #{$large-up} {
+            margin-left: -13px;
+        }
+
         .get-social-title {
-            width: 100%;
-            height: 85px;
-            margin: 0;
+            width: 215px;
+            height: 90px;
+            margin: 0 auto;
             position: relative;
-            background: url('../../../../assets/logos/follow-elle.svg') no-repeat 90px 0;
-
-            @media #{$medium-only} {
-                background-position-x: 10px;
-            }
-
-            @media #{$large-up} {
-                width: 256px;
-                background-position-x: 30px;
-            }
+            background: url('../../../../assets/logos/follow-elle.svg') no-repeat 3px 0;
 
             &:before {
                 display: none;
